--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                             <div class="icon">
-                                <a href="https://github.com/Melsounds/countdown-clock-repo#countdown-clock-repo" target="_blank">
+                                <a href="index.html" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
