--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                             <div class="icon">
-                                <a href="https://github.com/Melsounds/melstores-e-commerce-design/commit/9ab0df47195d990504c3e2d5e5d57f130b2a6408#diff-1353187403a9675c1eb1f56c85a3e7c36acd1c04d6790a0076b013d5898c9f35">
+                                <a href="https://melsounds.github.io/TheNigerianObserver-Repo/">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
