--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                 </a>
                             </div>
                             <div class="icon">
-                                <a href="">
+                                <a href="https://melsounds.github.io/countdown-clock-repo/">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
