--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                             <div class="icon">
-                                <a href="" target="_blank">
+                                <a href="https://melsounds.github.io/TheNigerianObserver-Repo/" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
@@ -237,7 +237,7 @@
                             <h3>Project Source</h3>
                             <div class="icons">
                             <div class="icon">
-                                <a href="https://melsounds.github.io/TheNigerianObserver-Repo/">
+                                <a href="">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
