--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                 </a>
                             </div>
                             <div class="icon">
-                                <a href="">
+                                <a href="https://melsounds.github.io/melnaija2-repo/">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
