--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                 </a>
                             </div>
                             <div class="icon">
-                                <a href="">
+                                <a href="https://melsounds.github.io/MelStores2/">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
