--- a/index.html
+++ b/index.html
@@ -224,6 +224,16 @@
                                     <i class="fab fa-github"></i>
                                 </a>
                             </div>
+                            <div class="icon">
+                                <a href="https://melsounds.github.io/spira-repo/">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
+                            <div class="icon">
+                                <a href="">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
                         </div>
                         </div>
                     </div>
